<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mitem="http://schemas.android.com/apk/res-audo/com.keydom.ih_common.view"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_f9f9f9" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/dp_20">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_visit_name"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/medical_record_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_toEndOf="@id/text"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14"
            tools:text="姓名" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/txt_visit_card_number"
            android:textColor="@color/tab_nol_color"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/medical_record_card_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_toEndOf="@id/text1"
            android:textColor="@color/tab_nol_color"
            android:textSize="@dimen/sp_12"
            tools:text="111111111111111111" />

        <TextView
            android:id="@+id/medical_record_change_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/corner3_stroke_999999"
            android:paddingStart="@dimen/dp_15"
            android:paddingTop="@dimen/dp_5"
            android:paddingEnd="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_5"
            android:text="@string/txt_change" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/color_f9f9f9" />

    <com.keydom.ih_common.view.GeneralItemView
        android:id="@+id/medical_record_inspection"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_57"
        mitem:itemTitle="@string/txt_medical_record_inspection"
        mitem:rightImg="@mipmap/exa_report_right" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_f9f9f9" />

    <com.keydom.ih_common.view.GeneralItemView
        android:id="@+id/medical_record_medical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_57"
        mitem:itemTitle="@string/txt_patient_medical_records"
        mitem:rightImg="@mipmap/exa_report_right" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_f9f9f9" />

    <com.keydom.ih_common.view.GeneralItemView
        android:id="@+id/medical_record_examine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_57"
        mitem:itemTitle="@string/txt_inspection_report"
        mitem:rightImg="@mipmap/exa_report_right" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_f9f9f9" />

    <com.keydom.ih_common.view.GeneralItemView
        android:id="@+id/medical_record_check"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_57"
        mitem:itemTitle="@string/txt_check_report"
        mitem:rightImg="@mipmap/exa_report_right" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_f9f9f9" />

    <com.keydom.ih_common.view.GeneralItemView
        android:id="@+id/medical_record_prescription"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_57"
        mitem:itemTitle="@string/txt_prescription"
        mitem:rightImg="@mipmap/exa_report_right" />

</LinearLayout>