<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_10"
            android:background="@color/primary_bg_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_31"
            android:paddingTop="@dimen/dp_17"
            android:paddingEnd="@dimen/dp_7"
            android:paddingBottom="@dimen/dp_17">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@mipmap/point_icon_4"
                android:drawablePadding="@dimen/dp_18"
                android:gravity="center_vertical"
                android:text="@string/txt_upload_id_card"
                android:textColor="@color/primary_font_color"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_select_visit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="7dp"
                android:text="@string/txt_select_visit_people"
                android:textColor="@color/list_tab_color"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_11"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dp_24"
            android:paddingEnd="@dimen/dp_24">

            <com.keydom.ih_patient.view.MedicalAuthLayout
                android:id="@+id/layout_front"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:tvHint="@string/txt_id_card_front" />

            <com.keydom.ih_patient.view.MedicalAuthLayout
                android:id="@+id/layout_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_11"
                android:layout_weight="1"
                app:tvHint="@string/txt_id_card_back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_11"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dp_24"
            android:paddingEnd="@dimen/dp_24">

            <com.keydom.ih_patient.view.MedicalAuthLayout
                android:id="@+id/layout_hand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:tvHint="@string/txt_id_card_hand" />

            <com.keydom.ih_patient.view.MedicalAuthLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_11"
                android:layout_weight="1"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_19"
            android:background="@color/color_f1f1f1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:paddingStart="@dimen/dp_19"
            android:paddingEnd="@dimen/dp_19">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableStart="@mipmap/bind_card_user_name_icon"
                android:drawablePadding="@dimen/dp_15"
                android:gravity="center_vertical"
                android:text="@string/bind_card_user_name"
                android:textColor="@color/edit_text_color"
                android:textSize="@dimen/sp_14" />

            <com.keydom.ih_common.view.InterceptorEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical|end"
                android:hint="@string/location_manage_add_name_hint"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#BBBBBB"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentBottom="true"
                android:background="@color/primary_bg_color" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:paddingStart="@dimen/dp_19"
            android:paddingEnd="@dimen/dp_19">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableStart="@mipmap/bind_card_card_num_icon"
                android:drawablePadding="@dimen/dp_15"
                android:gravity="center_vertical"
                android:text="@string/txt_id_card"
                android:textColor="@color/edit_text_color"
                android:textSize="@dimen/sp_14" />

            <com.keydom.ih_common.view.InterceptorEditText
                android:id="@+id/et_id_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical|end"
                android:hint="@string/manage_user_id_card_number_hint"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#BBBBBB"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentBottom="true"
                android:background="@color/primary_bg_color" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:paddingStart="@dimen/dp_19"
            android:paddingEnd="@dimen/dp_19">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableStart="@mipmap/relationshiper_phone"
                android:drawablePadding="@dimen/dp_15"
                android:gravity="center_vertical"
                android:text="@string/txt_phone"
                android:textColor="@color/edit_text_color"
                android:textSize="@dimen/sp_14" />

            <com.keydom.ih_common.view.InterceptorEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical|end"
                android:hint="@string/location_manage_add_phone_hint"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#BBBBBB"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentBottom="true"
                android:background="@color/primary_bg_color" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp_27"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_27"
            android:layout_marginBottom="@dimen/dp_47"
            android:background="@mipmap/pay_commit_bg"
            android:gravity="center"
            android:text="@string/txt_next"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>

</ScrollView>