<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/register_success_color"
            android:gravity="center"
            android:text="@string/txt_amniocentesis_reserve_result"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_amniocentesis_success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_reserve_success"
            android:textColor="@color/register_success_color"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_37"
            android:layout_marginEnd="@dimen/dp_32"
            android:gravity="center"
            android:text="@string/txt_amniocentesis_reserve_sms_note"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_36"
            android:background="@color/color_f1f1f1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_26"
            android:layout_marginEnd="@dimen/dp_32"
            android:gravity="center"
            android:text="@string/txt_amniocentesis_reserve_procedure_note"
            android:textColor="@color/color_0084f6"
            android:textSize="@dimen/sp_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_29"
            android:background="@color/color_f9f9f9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_22">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_28"
                    android:src="@mipmap/point_icon_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_11"
                    android:layout_marginEnd="@dimen/dp_28"
                    android:text="@string/txt_amniocentesis_reserve_visit_note"
                    android:textColor="@color/vip_detail_balance_number_text"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_55"
                android:layout_marginTop="@dimen/dp_19"
                android:layout_marginEnd="@dimen/dp_28"
                android:text="@string/txt_amniocentesis_reserve_visit_url"
                android:textColor="@color/other_login_color"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_25"
                android:background="@color/color_f1f1f1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_22">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_28"
                    android:src="@mipmap/point_icon_4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_11"
                    android:layout_marginEnd="@dimen/dp_28"
                    android:text="@string/txt_amniocentesis_reserve_informed_note"
                    android:textColor="@color/vip_detail_balance_number_text"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_55"
                android:layout_marginTop="@dimen/dp_19"
                android:layout_marginEnd="@dimen/dp_28"
                android:text="@string/txt_amniocentesis_reserve_informed_url"
                android:textColor="@color/other_login_color"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_25"
                android:background="@color/color_f1f1f1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_25">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_22">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_28"
                    android:src="@mipmap/point_icon_5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_11"
                    android:layout_marginEnd="@dimen/dp_28"
                    android:text="@string/txt_amniocentesis_reserve_surgery_note"
                    android:textColor="@color/vip_detail_balance_number_text"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_55"
                android:layout_marginTop="@dimen/dp_19"
                android:layout_marginEnd="@dimen/dp_28"
                android:text="@string/txt_amniocentesis_reserve_surgery_url"
                android:textColor="@color/other_login_color"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_10"
            android:background="@color/color_f9f9f9" />

        <TextView
            android:id="@+id/amniocentesis_result_next_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginStart="@dimen/dp_27"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginEnd="@dimen/dp_27"
            android:layout_marginBottom="@dimen/dp_28"
            android:background="@mipmap/pay_commit_bg"
            android:gravity="center"
            android:text="@string/txt_know"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
